Fix test align in start page

--- a/web/src/components/startPage/startPage.css
+++ b/web/src/components/startPage/startPage.css
@@ -22,7 +22,7 @@
       border-radius: 0;
       height: 64px;
       font-family: var(--startpage-content-font) !important;
-      line-height: 20px;
+      line-height: 70px;
       margin: 0;
       width: 434px;
     }
@@ -31,7 +31,7 @@
       border-radius: 0;
       height: 64px;
       font-family: var(--startpage-content-font) !important;
-      line-height: 20px;
+      line-height: 70px;
       margin: 0;
       width: 399px;
     }
