--- a/web/src/components/toolbox/buttons/css/arrowBlueButton.css
+++ b/web/src/components/toolbox/buttons/css/arrowBlueButton.css
@@ -12,7 +12,7 @@
   height: 32px;
   position: absolute;
   right: 24px;
-  top: 21px;
+  top: 7px;
   width: 140px;
 }
 
